--- a/sanderx/css/style.css
+++ b/sanderx/css/style.css
@@ -32,6 +32,11 @@ body {
     transition: all 0.6s ease;
 }
 
+a {
+    text-decoration: none;
+    color: var(--text-secondary);
+}
+
  /* Loading Screen */
         .loading-screen {
             position: fixed;
